<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/dialog_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:minHeight="240dp"
    android:layout_gravity="bottom"
    android:paddingBottom="20dp"
    android:gravity="center_vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/enigmaTitle"
        android:textColor="#fff"
        android:text="@string/helpTitle"
        android:textSize="15sp"
        android:layout_marginBottom="5dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/htEnc"
        >
        <Button
            android:id="@+id/keytype11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#42a2ff"
            android:layout_margin="2dp"
            android:text="@string/punct1" />

       <TextView
            android:gravity="center"
            android:id="@+id/keytype12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:textColor="#42a2ff"
            android:layout_margin="2dp"
            android:text="@string/how_to_enc" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/htDec">
    <Button
        android:id="@+id/keytype21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#42a2ff"
        android:layout_margin="2dp"
        android:text="@string/punct2" />
        <TextView
            android:gravity="center"
            android:id="@+id/keytype22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#42a2ff"
            android:layout_margin="2dp"
            android:text="@string/how_to_dec" />
    </FrameLayout>


    <Button
        android:id="@+id/keytype3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#42a2ff"
        android:layout_margin="2dp"
        android:text="@string/punct3" />
    <Button

        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#42a2ff"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/cancel" />

</LinearLayout>