<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/dialog_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:minHeight="240dp"
    android:paddingBottom="20dp"
    android:layout_gravity="bottom"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/enigmaTitle"
        android:textColor="#fff"
        android:text="@string/menuTitle"
        android:layout_marginBottom="5dp"/>
    <Button
        android:id="@+id/keytype1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dateTime"
        android:textColor="#42a2ff"
        android:layout_margin="2dp"
         />

    <Button
        android:id="@+id/keytype2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#42a2ff"
        android:layout_margin="2dp"
        android:text="@string/pin"
        />

    <Button
        android:id="@+id/keytype3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#42a2ff"
        android:layout_margin="2dp"
        android:text="@string/stringKey"
         />

    <Button
            android:id="@+id/buttonCancel"
            android:text="@string/cancel"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        android:textColor="#42a2ff"


            />


</LinearLayout>