<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:iosched="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar_actionbar"
        android:layout_width="0dp"
        android:background="#9d000000"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        iosched:layout_constraintBottom_toTopOf="@+id/scrollView"
        />
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintRight_toLeftOf="@+id/buttonCenter"
            android:id="@+id/buttonLeft"
            android:text="@string/cancel"
            android:gravity="center"
            android:textColor="#fa684a"
            android:textSize="18sp"
            android:paddingRight="25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar_actionbar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="1.0" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/buttonRight"
            android:text="@string/done"
            android:paddingLeft="30dp"
            android:gravity="center"
            android:textColor="#fa684a"
            android:textSize="18sp"

            app:layout_constraintLeft_toRightOf="@+id/buttonCenter"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar_actionbar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintRight_toLeftOf="@+id/buttonRight"
            android:id="@+id/buttonCenter"
            android:gravity="center"
            android:textColor="#fff"
            android:text="@string/options"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@+id/buttonLeft"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar_actionbar"
            app:layout_constraintTop_toTopOf="@+id/toolbar_actionbar"
            android:layout_marginTop="8dp" />

<ScrollView
    android:id="@+id/scrollView"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar_actionbar"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.0">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/MenuTheme"
    android:background="@color/colorPrimaryGray">

    <View android:id="@+id/rectangleBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View android:id="@+id/rectangleBackgroundTop"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#4c787777"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <View android:id="@+id/rectangleMenu1"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/colorPrimaryMenu"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activeLink"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@+id/rectangleMenu1"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleMenu1"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineV1" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/rectangleMenu1"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleMenu1"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV2"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:id="@+id/text1"
        android:text="@string/activeLinkDesc"
        android:alpha="0.5"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangleMenu1"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/link_icon"
        app:layout_constraintTop_toTopOf="@+id/rectangleMenu1"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleMenu1"
        app:layout_constraintRight_toLeftOf="@id/guidelineV1"
        android:layout_marginLeft="8dp"
        android:id="@+id/imageView1" />


    <View
        android:id="@+id/rectangleMenu2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/colorPrimaryMenu"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintHorizontal_bias="0.0" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Detector"
        android:id="@+id/menu2"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@+id/rectangleMenu2"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleMenu2"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineV1" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/data_icon"
        app:layout_constraintTop_toTopOf="@+id/rectangleMenu2"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleMenu2"
        app:layout_constraintRight_toLeftOf="@id/guidelineV1"
        android:layout_marginLeft="8dp"
        android:id="@+id/imageView2" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="@+id/rectangleMenu2"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleMenu2"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV2"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:id="@+id/text2"
        android:text="@string/DetectorDesc"
        android:alpha="0.5"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangleMenu2"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />



    <View
        android:id="@+id/rectangleMenu3"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/colorPrimaryMenu"
        android:visibility="visible"

        app:layout_constraintTop_toBottomOf="@+id/text2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttomTitles"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@+id/rectangleMenu3"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleMenu3"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineV1" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/text_icon"
        app:layout_constraintTop_toTopOf="@+id/rectangleMenu3"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleMenu3"
        app:layout_constraintRight_toLeftOf="@id/guidelineV1"
        android:layout_marginLeft="8dp"
        android:id="@+id/imageView3" />
    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppTheme"

        app:layout_constraintTop_toTopOf="@+id/rectangleMenu3"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleMenu3"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV2"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:id="@+id/text3"
        android:text="@string/buttonTitlesDesc"
        android:alpha="0.5"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangleMenu3"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="15dp" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:id="@+id/text31"
        android:alpha="0.5"
        android:textSize="16sp"
        android:text="@string/anotherOS"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text3"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    <View
        android:id="@+id/rectangleMenu4"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/colorPrimaryMenu"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/text31"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"/>
    <View
        android:id="@+id/rectangleMenu45"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:background="@color/colorPrimaryMenu"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/rectangleMenu4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <View
        android:id="@+id/rectangleMenu5"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/colorPrimaryMenu"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/rectangleMenu45"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textLink"
        />

    <ImageButton
    android:id="@+id/imageButtonGo1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    app:layout_constraintRight_toRightOf="parent"
    app:srcCompat="@drawable/ic_action_name"
    app:layout_constraintTop_toTopOf="@+id/rectangleMenu4"
    app:layout_constraintBottom_toBottomOf="@+id/rectangleMenu4"
        android:layout_marginRight="5dp"
        android:scaleX="0.5"
        android:scaleY="0.5"
  />

    <ImageButton
        android:id="@+id/imageButtonGo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleMenu5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangleMenu5"
        app:srcCompat="@drawable/ic_action_name"
        android:scaleX="0.5"
        android:scaleY="0.5"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text4"
        android:text="@string/mac"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleMenu4"
        app:layout_constraintLeft_toLeftOf="@id/guidelineV1"
        app:layout_constraintTop_toTopOf="@+id/rectangleMenu4"

        android:layout_marginRight="8dp"
        android:layout_marginLeft="5dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/imac_icon"
        app:layout_constraintTop_toTopOf="@+id/rectangleMenu4"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleMenu4"
        app:layout_constraintRight_toLeftOf="@id/guidelineV1"
        android:layout_marginLeft="8dp"
        android:id="@+id/imageView4" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text5"
        android:text="@string/iphone"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleMenu5"
        app:layout_constraintLeft_toLeftOf="@id/guidelineV1"
        app:layout_constraintTop_toTopOf="@+id/rectangleMenu5"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="5dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/iphone_icon"
        app:layout_constraintTop_toTopOf="@+id/rectangleMenu5"
        app:layout_constraintBottom_toBottomOf="@+id/rectangleMenu5"
        app:layout_constraintRight_toLeftOf="@id/guidelineV1"
        android:layout_marginLeft="8dp"
        android:id="@+id/imageView5" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textLink"
        android:text="@string/uniLink"
        android:layout_marginTop="10dp"
        android:alpha="0.5"
        android:textSize="13sp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/rectangleMenu5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"/>



    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline1"
        app:layout_constraintGuide_percent="0.12"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="139dp"
        tools:layout_editor_absoluteX="0dp" />






    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineV2"
        app:layout_constraintGuide_percent="0.95"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="81dp"
        tools:layout_editor_absoluteX="365dp" />
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineV1"
        app:layout_constraintGuide_percent="0.14"
        android:orientation="vertical" />


</android.support.constraint.ConstraintLayout>
</ScrollView>
    </android.support.constraint.ConstraintLayout>
    </LinearLayout>